service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zvps-svc-udp
  namespace: zvps-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: zvps-super 
  ports:
    - name: hy-udp
      protocol: UDP
      port: 2325   
      targetPort: 2325 
    - name: tuic-udp
      protocol: UDP
      port: 2326      
      targetPort: 2326 
  externalTrafficPolicy: Cluster
